--- a/templates/teacher_assignment_summary.html
+++ b/templates/teacher_assignment_summary.html
@@ -41,6 +41,9 @@
                     <a href="{{ url_for('manual_submission', assignment_id=assignment.assignment_id) }}" class="btn btn-outline-primary">
                         <i class="bi bi-file-earmark-plus me-1"></i>Manual submission
                     </a>
+                    <a href="{{ url_for('feedback_summary_report', assignment_id=assignment.assignment_id) }}" class="btn btn-outline-primary">
+                        <i class="bi bi-clipboard-data me-1"></i>Generate feedback & summary report
+                    </a>
                     <a href="{{ url_for('download_assignment_report', assignment_id=assignment.assignment_id) }}" class="btn btn-primary">
                         <i class="bi bi-download me-1"></i>Download PDF Report
                     </a>
